# vcad

./: .gitignore  CHANGELOG.json  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json  turbo.json  vercel.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml  pages.yml
crates/stepperoni/: Cargo.toml  LICENSE-MIT  README.md
crates/stepperoni/src/: error.rs  lexer.rs  lib.rs  parser.rs
crates/vcad/: Cargo.toml
crates/vcad-cli/: Cargo.toml
crates/vcad-cli/src/: app.rs  input.rs  main.rs
crates/vcad-cli/src/render/: mod.rs  rasterize.rs  sixel.rs
crates/vcad-cli/src/ui/: command.rs  mod.rs  status.rs  tree.rs  viewport.rs
crates/vcad-ir/src/: compact.rs  lib.rs
crates/vcad-kernel/: Cargo.toml
crates/vcad-kernel-booleans/: Cargo.toml  ROADMAP.md
crates/vcad-kernel-booleans/benches/: boolean_ops.rs
crates/vcad-kernel-booleans/src/: bbox.rs  classify.rs  lib.rs  pipeline.rs  repair.rs  sew.rs  split.rs  ssi.rs  trim.rs
crates/vcad-kernel-cam/: Cargo.toml
crates/vcad-kernel-cam/src/: error.rs  lib.rs  operation.rs  tool.rs  toolpath.rs
crates/vcad-kernel-cam/src/operation/: contour.rs  face.rs  pocket.rs
crates/vcad-kernel-cam/src/post/: grbl.rs  mod.rs
crates/vcad-kernel-constraints/: Cargo.toml
crates/vcad-kernel-constraints/src/: constraint.rs  entity.rs  export.rs  jacobian.rs  lib.rs  residual.rs  sketch.rs  solver.rs
crates/vcad-kernel-drafting/: Cargo.toml
crates/vcad-kernel-drafting/examples/: bracket_drawing.rs  cube_drafting.rs  dimension_test.rs
crates/vcad-kernel-drafting/src/: detail.rs  edge_extract.rs  hidden_line.rs  lib.rs  projection.rs  types.rs
crates/vcad-kernel-drafting/src/dimension/: angular.rs  gdt.rs  geometry_ref.rs  layer.rs  linear.rs  mod.rs  ordinate.rs  radial.rs  render.rs  style.rs
crates/vcad-kernel-geom/: Cargo.toml
crates/vcad-kernel-geom/src/: lib.rs
crates/vcad-kernel-gpu/src/: context.rs
crates/vcad-kernel-math/: Cargo.toml
crates/vcad-kernel-math/src/: lib.rs  predicates.rs
crates/vcad-kernel-physics/src/: gym.rs  joints.rs  world.rs
crates/vcad-kernel-primitives/: Cargo.toml
crates/vcad-kernel-primitives/src/: lib.rs
crates/vcad-kernel-raytrace/: Cargo.toml
crates/vcad-kernel-raytrace/src/: trim.rs
crates/vcad-kernel-raytrace/src/gpu/: buffers.rs  mod.rs  pipeline.rs
crates/vcad-kernel-raytrace/src/gpu/shaders/: raytrace.wgsl
crates/vcad-kernel-shell/: Cargo.toml
crates/vcad-kernel-shell/src/: lib.rs
crates/vcad-kernel-sketch/src/: profile.rs
crates/vcad-kernel-step/: Cargo.toml
crates/vcad-kernel-step/src/: error.rs  lexer.rs  lib.rs  parser.rs  reader.rs  writer.rs
crates/vcad-kernel-step/src/entities/: curves.rs  geometry.rs  mod.rs  surfaces.rs  topology.rs
crates/vcad-kernel-sweep/: Cargo.toml
crates/vcad-kernel-sweep/src/: frenet.rs  lib.rs  loft.rs  sweep.rs
crates/vcad-kernel-tessellate/: Cargo.toml
crates/vcad-kernel-tessellate/src/: lib.rs
crates/vcad-kernel-text/: Cargo.toml
crates/vcad-kernel-text/src/: builtin.rs  font.rs  glyph.rs  lib.rs  profile.rs
crates/vcad-kernel-topo/: Cargo.toml
crates/vcad-kernel-topo/src/: lib.rs
crates/vcad-kernel-urdf/: Cargo.toml
crates/vcad-kernel-urdf/src/: error.rs  lib.rs  reader.rs  types.rs  writer.rs
crates/vcad-kernel-wasm/: Cargo.toml
crates/vcad-kernel-wasm/src/: lib.rs
crates/vcad-kernel/src/: lib.rs
crates/vcad/src/: lib.rs  step.rs
docs/: style-guide.md
docs/features/: CONTRIBUTING.md  ROADMAP.md  ai-co-designer.md  assembly-joints.md  boolean-operations.md  browser-native.md  cad-native-world-model.md  cad-physics-roundtrip.md  cam.md  cloud-document-selection.md  collaboration.md  command-palette.md  dependency-visualization.md  document-persistence.md  drafting-2d.md  drag-drop-reordering.md  drawings.md  fea.md  feature-grouping.md  fillets-chamfers.md  fork-reality.md  generative-design.md  headless-api.md  health-intelligence.md  hover-preview.md  import-export.md  index.md  inline-parameter-editing.md  instant-physicality.md  intent-based-modeling.md  isomorphic-kernel.md  keyboard-navigation.md  living-spec.md  materials.md  multiplayer-physics.md  offline-first-privacy.md  one-click-rl-training.md  parallel-wasm-workers.md  parametric-time-machine.md  patterns.md  (+26 more)
docs/research/: 2026-01-29-boolean-robustness.md
examples/: plate.vcad  robot-arm-2dof.urdf  robot-arm-2dof.vcad
skill/: SKILL.md
src/: lib.rs
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 004_add_ratings.sql
web/alternatives/: onshape.html
web/vs/: onshape.html
