[package]
name = "stepperoni"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast STEP (ISO 10303-21) file parser"
repository = "https://github.com/vcad-io/stepperoni"
keywords = ["step", "cad", "iso-10303", "parser", "brep"]
categories = ["parser-implementations", "science"]

[dependencies]
thiserror = "2"

[dev-dependencies]
