[package]
name = "vcad-kernel-drafting"
description = "2D drafting and technical drawing generation for the vcad kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vcad-kernel-math = { path = "../vcad-kernel-math" }
vcad-kernel-tessellate = { path = "../vcad-kernel-tessellate" }
serde = { workspace = true }
