[package]
name = "vcad-kernel-primitives"
description = "B-rep primitive solid construction for the vcad kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vcad-kernel-math = { path = "../vcad-kernel-math" }
vcad-kernel-topo = { path = "../vcad-kernel-topo" }
vcad-kernel-geom = { path = "../vcad-kernel-geom" }
